// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserItem /> renders with admin icon when [isAdmin=true] 1`] = `
<withRouter(LinkContainer)
  style={
    Object {
      "paddingLeft": "10px",
    }
  }
  to="/administration/users/bob"
>
  <ListGroupItem
    bsClass="list-group-item"
    className="spaced"
    listItem={false}
  >
    <Flex
      alignContent="stretch"
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <Identicon
        hash="foobar"
        size={32}
      />
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        bob
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        <Icon
          bsStyle="primary"
          faStyle="fas"
          fixedWidth={false}
          name="user-shield"
          pullRight={false}
        />
      </FlexItem>
    </Flex>
  </ListGroupItem>
</withRouter(LinkContainer)>
`;

exports[`<UserItem /> renders without icon when [isAdmin=false] 1`] = `
<withRouter(LinkContainer)
  style={
    Object {
      "paddingLeft": "10px",
    }
  }
  to="/administration/users/bob"
>
  <ListGroupItem
    bsClass="list-group-item"
    className="spaced"
    listItem={false}
  >
    <Flex
      alignContent="stretch"
      alignItems="center"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <Identicon
        hash="foobar"
        size={32}
      />
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      >
        bob
      </FlexItem>
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={10}
        shrink={1}
      />
    </Flex>
  </ListGroupItem>
</withRouter(LinkContainer)>
`;
